<!--Every Layout has to have its Layout_width and Layout_height
    The first layout has to have the xmlns too compulsory things-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlue">


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/colorDark"
                 />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ivLogin"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/images"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/colorDark"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:id="@+id/tvFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvFirstName"
                    android:layout_weight="1"
                    />
                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:hint="@string/etFristName"

                    android:layout_weight="1"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:id="@+id/tvLastView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvLastView"

                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/etLastView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/etLastView"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvPassword"

                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/etPassword"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvEmail"

                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/etEmail"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvPhone"

                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="phone"
                    android:layout_weight="1"
                    android:hint="@string/etPhone"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGreen"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/colorDark"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                <RadioButton

                    android:id="@+id/rbMale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rbMale"
                    android:layout_weight="1"
                    android:onClick="radioMale"
                    android:checked="false" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:text="@string/rbFemale"
                    android:layout_weight="1"
                    android:onClick="radioFemale" />

                </RadioGroup>
            </LinearLayout>


            <CheckBox
                android:id="@+id/cbAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbAgree"
                android:onClick="checkBoxAgree" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvSelect"
                android:textColor="@color/colorDark"
                android:id="@+id/textView5" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/country_arrays"
                android:prompt="@string/country_prompt" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:text="@string/btnSubmit"
                android:textAlignment="center"
                android:textColor="#000000"
                android:background="@drawable/btn_layout"
                android:onClick="btnSubmit"
               />


        </LinearLayout>


        <!--Practice with horizontalScrollView-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/colorDark"
                />
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:editable="true" />

            </HorizontalScrollView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/hello_world"
                 />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:editable="true" />
            </HorizontalScrollView>
        </LinearLayout>
        <!--Over with horizontalScrollView-->

        <!--Gravity was applied on the text and Layout_gravity was for the whole textView -->
        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/exit" />
    </LinearLayout>

</ScrollView>


